--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a class="btn btn-primary" href="#">Explore Mine</a>
         </div>
         <div class="row mx-auto justify-content-md-center">
-            <img class="img-career text-center" src="/images/img-1.svg" alt="Career">
+            <img class="img-career text-center" src="images/img-1.svg" alt="Career">
         </div>
     </header>
     <!-- End: HEADING -->
@@ -74,7 +74,7 @@
         <div class="container-md">
             <div class="row justify-content-center text-center mx-auto">
                 <div class="mx-auto">
-                    <img class="img-partners mx-auto" src="/images/partner.png" alt="our Partners">
+                    <img class="img-partners mx-auto" src="images/partner.png" alt="our Partners">
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     <div class="card card-custom p-md-3 rounded-3">
                         <div class="row">
                             <div class="col-2">
-                                <img src="/images/ic-google.png" width="52" alt="Google" class="icon-google">
+                                <img src="images/ic-google.png" width="52" alt="Google" class="icon-google">
                             </div>
                             <div class="col-6 col-sm-6 ms-4">
                                 <h4>Google</h4>
@@ -108,7 +108,7 @@
                     <div class="card card-custom p-md-3 rounded-3">
                         <div class="row">
                             <div class="col-2">
-                                <img src="/images/ic-amazon.png" width="52" alt="Amazon" class="icon-amazon">
+                                <img src="images/ic-amazon.png" width="52" alt="Amazon" class="icon-amazon">
                             </div>
                             <div class="col-6 ms-4">
                                 <h4>Amazon</h4>
@@ -126,7 +126,7 @@
                     <div class="card card-custom p-md-3 rounded-3">
                         <div class="row">
                             <div class="col-2">
-                                <img src="/images/ic-twitter.png" width="52" alt="Twitter" class="icon-twitter">
+                                <img src="images/ic-twitter.png" width="52" alt="Twitter" class="icon-twitter">
                             </div>
                             <div class="col-8 ms-4">
                                 <h4>Twitter</h4>
@@ -142,7 +142,7 @@
                     <div class="card card-custom p-md-3 rounded-3">
                         <div class="row">
                             <div class="col-2">
-                                <img src="/images/ic-linkedin.png" width="52" alt="LinkedIn" class="icon-linkedin">
+                                <img src="images/ic-linkedin.png" width="52" alt="LinkedIn" class="icon-linkedin">
                             </div>
                             <div class="col-6 ms-4">
                                 <h4>LinkedIn</h4>
@@ -167,7 +167,7 @@
         <div class="container-md">
             <div class="row">
                 <div class="col align-self-md-start">
-                    <img src="/images/gallery.png" alt="Readon">
+                    <img src="images/gallery.png" alt="Readon">
                 </div>
                 <div class="col align-self-md-start">
                     <h3>We help best people like you across the world</h3>
