--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
         <div class="container-md">
             <a class="navbar-brand me-4" href="#">
-                <img class="brand" src="/images/logo.png" alt="Logo Careerr - Career for Better and Faster Worker">
+                <img class="brand" src="images/logo.png" alt="Logo Careerr - Career for Better and Faster Worker">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
