--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- End: NAVBAR -->
 
     <!-- Start: HEADING -->
-    <div class="background-heading"></div>
+    <div class="background-heading" style="background-image: url('img-bg.png');"></div>
     <header class="d-sm-block d-md-block mx-auto justify-content-center align-content-center">
         <div class="d-md-block mx-auto">
             <h1 class="text-center mx-auto px-5 pt-5">Career for Better and Faster Worker</h1>
